# nero

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
src/cli/: command.h
src/ui/: stripe.h
